--- a/foundry.toml
+++ b/foundry.toml
@@ -10,4 +10,6 @@ remappings = [
     'forge-std/=lib/forge-std/src/',
 ]
 
+fs_permissions = [{ access = "read-write", path = "./" }]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
